# shout

./: .env  Cargo.toml  README.md
backend/: .env  Cargo.toml
backend/src/: lib.rs  main.rs
frontend/: Cargo.toml
frontend/src/: main.rs
src/: main.rs
