[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.5.7", features = ["csr"] }
reqwasm = "0.5.0"
serde = { version = "1.0.196", features = ["derive"] }
